fix overflow and z-index issues

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -13,6 +13,7 @@
   transition: all 0.2s ease-in-out;
   font-family: "Barlow Semi Condensed", sans-serif;
   letter-spacing: 0.2em;
+  z-index: 10;
   &:hover {
     background: #fff;
     border-color: #fff;
@@ -29,6 +30,7 @@
   color: vars.$dark-text;
   font-weight: 600;
   padding: 14px 55px;
+  align-self: center;
   &:hover {
     background: transparent;
     border-color: vars.$header-outline;
